[project]
name = "llm-client"
description = "ComfyUI node for LLM client integration. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Z-Engineer ComfyUI Node - 필수 패키지", "# ComfyUI/custom_nodes/comfyui-zengineer/requirements.txt", "# HTTP 요청 라이브러리 (메인 의존성)", "requests>=2.31.0", "# URL 파싱 (Python 표준 라이브러리지만 명시)", "# urllib3는 requests가 자동으로 설치함", "# 참고: ComfyUI 자체 의존성은 이미 설치되어 있다고 가정", "# - torch", "# - numpy", "# - PIL/Pillow"]

[project.urls]
Repository = "https://github.com/ytoaa/ComfyUI-LLM-Client"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/ytoaa/ComfyUI-LLM-Client/wiki"
"Bug Tracker" = "https://github.com/ytoaa/ComfyUI-LLM-Client/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-LLM-Client"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

